# linev2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  acme.json  crewai_flow.html  docker-compose-production.yml  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  init.sql  pyproject.toml  start.sh  traefik.yml
src/: main.py  models.py  questions.yaml
src/cache/: redis_chat_session_manager.py  redis_session_manager.py
src/crewai_lead_qualification_chatbot/: main.py  models.py  question_manager.py  questions.yaml
src/crewai_lead_qualification_chatbot/crews/chat_crew/: chat_crew.py
src/crews/chat_crew/: chat_crew.py  chat_flow.py  conversation_flow_manager.py
src/crews/chat_crew/config/: agents.yaml  flow_config.yaml  tasks.yaml  tasks_unified.yaml
src/database/: config.py  database_client.py  models.py
src/faq/: Conhecendoconsorcio.txt  O que não pode ser dito para o cliente.txt  apressado.narede.txt  desconfiado.narede.txt  indeciso.narede.txt  lance embutido.txt  lanceembutido.narede.txt  objetivo.narede.txt  personalidade_line.txt  plano mais facil.txt  regras funcionamento e duvidas sobre consorcio.txt
src/faqs/: Transbordo, Compliance e Limites do Chatbot Line.txt  lanceembutido.txt  plano integral facil.txt  situacoesespeciais.txt
src/human_handoff/: human_handoff.py
src/knowledge/: index_faqs.py  knowledge_base.py
src/scoring/: consorcio_scoring.py
src/tools/: __init__.py  knowledge_search_tool.py  lead_qualification_tool.py  simulation_tool.py
src/whatsapp/: client.py  webhook.py
(+2 files in other folders)
